Make p#content just be p, and fix up #footer p to align text left

--- a/static/site.css
+++ b/static/site.css
@@ -76,7 +76,7 @@ h3 {
 	margin-bottom: 0.5em;
 }
 
-#content p {
+p {
 	font-size: 13px;
 	line-height: 1.5em;
 	margin-bottom: 1.5em;
@@ -99,4 +99,5 @@ li.gamelinks {
 #footer p {
 	font-size: 0.8em;
 	margin-bottom: 1em;
+	text-align: left;
 	}
